# ball_detector

./: CMakeLists.txt  package.xml  setup.py
scripts/: ball_detector_main  ball_detector_main~  pub_ball_detector  pub_ball_detector~
src/python_ball_detector/: identify_item.py  identify_item.py~  stateMachine.py  stateMachine.py~  videoCapture.py  videoCapture.py~
